--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^27.2.0",
+    "node-fetch": "^2.6.5",
     "supertest": "^6.1.6"
   },
   "engines": {
